<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kalkulator spalania</string>



    <string-array name= "title" >
        <item>Oblicz średnie spalanie </item>
        <item>Oblicz koszt spalonej benzyny</item>
        <item>Oblicz ilość kupionej benzyny </item>
        <item>Oblicz przejechany dystans</item>
        <item>Oblicz ilość spalonej benzyny</item>
    </string-array>


    <string-array name="subtitle">
        <item>znając ilość spalonej benzyny i przejechany dystans </item>
        <item>znając odległość, cenę i średnie spalanie</item>
        <item>znając wydaną kwote i cenę benzyny</item>
        <item>znając ilość spalonej benzyny i średnie spalanie</item>
        <item>znajac przejechany dystans i średnie spalanie</item>
    </string-array>

    <string-array name="dystans">
        <item>Kilometry</item>
        <item>Mile</item>
    </string-array>

    <string-array name="pojemnosc">
        <item>Litry</item>
        <item>GaleUs</item>
        <item>GaleEu</item>
    </string-array>


    <string name="wrongScore">0.0</string>
    <string name="odlegloscDoPrzejechania">Odległość do przejechania</string>
    <string name="OdlegloscWKm">Odległość w km</string>
    <string name="OdlegloscWMilach">Odległość w milach</string>
    <string name="cenaBenzyny">Cena benzyny</string>
    <string name="liczbaSpalonychLitrowNa100Km">Liczba spalanych litrów na 100 km</string>
    <string name="liczbaSpalonychLitrowNa100Mil">Liczba spalanych litrów na 100 mil</string>
    <string name="liczbaSpalonychGalonowUsNa100Km">Liczba spalanych galonówUs na 100 km</string>
    <string name="liczbaSpalonychGalonowUsNa100Mil">Liczba spalanych galonówUs na 100 mil</string>
    <string name="liczbaSpalonychGalonowUeNa100Mil">Liczba spalanych galonówUe na 100 mil</string>
    <string name="liczbaSpalonychGalonowUeNa100Km">Liczba spalanych galonówUe na 100 km</string>
    <string name="kosztSpalonejBenzyny">Koszt spalonej benzyny</string>
    <string name="cena">Cena</string>
    <string name="spalanie">spalanie</string>
    <string name="kwotaWydanychPieniedzyNaBenzyne">Kwota wydanych pieniędzy na benzyne</string>
    <string name="kwota">kwota</string>
    <string name="iloscSpalonejBenzynyWLitrach">Ilość spalonej benzyny w litrach</string>
    <string name="iloscSpalonejBenzynyWGalachUs">Ilość spalonej benzyny w galachUs</string>
    <string name="iloscSpalonejBenzynyWGalachUe">Ilość spalonej benzyny w galachUe</string>
    <string name="iloscPrzejechanychKilometrow">Ilość przejechanych kilometrów</string>
    <string name="iloscPrzejechanychMil">Ilość przejechanych mil</string>
    <string name="spalonePaliwo">Spalone paliwo</string>
    <string name="przejechaneKilometry">Przejechane kilometry</string>
    <string name="przejechaneMile">Przejechane mile</string>
    <string name="spalanieNa100Kilometrow">Spalanie na 100 kilometrów</string>
    <string name="spalanieNa100Mil">Spalanie na 100 mil</string>

    <string name="banner_home_footer">ca-app-pub-8381360724877110/8301850187</string>

</resources>